fixed overflow of my-info tage

--- a/todo.css
+++ b/todo.css
@@ -155,6 +155,7 @@ ul {
     right: 0;
     bottom: 0;
     margin: 1rem;
+    font-family:monospace;
 }
 
 .danger {
@@ -178,3 +179,13 @@ ul {
     background-color: #222222;
 
 }
+@media screen and (max-width: 600px) {
+    #my-info {
+        visibility: hidden;
+        clear: both;
+        float: left;
+        margin: 10px auto 5px 20px;
+        width: 28%;
+        display: none;
+    }
+    }
